add ssl issue logic update L7 related api based site id
